chore: change deployed on Vercel to Cloudflare Pages

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,6 +17,8 @@ const t = useTranslations(lang);
       target="_blank"
       rel="noopener">Adonys Santos</a
     > • {t("footer.deployed_on")}
-    <a href="https://vercel.com/" target="_blank" rel="noopener">Vercel</a>
+    <a href="https://pages.cloudflare.com/" target="_blank" rel="noopener"
+      >Cloudflare Pages</a
+    >
   </small>
 </footer>
