--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -37,3 +37,15 @@ article {
 section p img {
     border-radius: 0.25rem;
 }
+
+.sr-only {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border-width: 0;
+}
